# est-vault

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml  tests.yml
src/est_vault/: __main__.py  cli.py  vault.py  version.py
tests/: test_cli.py  test_vault.py
